; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_inline_data.c_ext2fs_inline_data_ea_set.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_inline_data.c_ext2fs_inline_data_ea_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext2_inline_data = type { i32, i32, i32, i32 }
%struct.ext2_xattr_handle = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"system.data\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.ext2_inline_data*)* @ext2fs_inline_data_ea_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ext2fs_inline_data_ea_set(%struct.ext2_inline_data* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.ext2_inline_data*, align 8
  %4 = alloca %struct.ext2_xattr_handle*, align 8
  %5 = alloca i64, align 8
  store %struct.ext2_inline_data* %0, %struct.ext2_inline_data** %3, align 8
  %6 = load %struct.ext2_inline_data*, %struct.ext2_inline_data** %3, align 8
  %7 = getelementptr inbounds %struct.ext2_inline_data, %struct.ext2_inline_data* %6, i32 0, i32 3
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.ext2_inline_data*, %struct.ext2_inline_data** %3, align 8
  %10 = getelementptr inbounds %struct.ext2_inline_data, %struct.ext2_inline_data* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @ext2fs_xattrs_open(i32 %8, i32 %11, %struct.ext2_xattr_handle** %4)
  store i64 %12, i64* %5, align 8
  %13 = load i64, i64* %5, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %1
  %16 = load i64, i64* %5, align 8
  store i64 %16, i64* %2, align 8
  br label %35

17:                                               ; preds = %1
  %18 = load %struct.ext2_xattr_handle*, %struct.ext2_xattr_handle** %4, align 8
  %19 = call i64 @ext2fs_xattrs_read(%struct.ext2_xattr_handle* %18)
  store i64 %19, i64* %5, align 8
  %20 = load i64, i64* %5, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %17
  br label %32

23:                                               ; preds = %17
  %24 = load %struct.ext2_xattr_handle*, %struct.ext2_xattr_handle** %4, align 8
  %25 = load %struct.ext2_inline_data*, %struct.ext2_inline_data** %3, align 8
  %26 = getelementptr inbounds %struct.ext2_inline_data, %struct.ext2_inline_data* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.ext2_inline_data*, %struct.ext2_inline_data** %3, align 8
  %29 = getelementptr inbounds %struct.ext2_inline_data, %struct.ext2_inline_data* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i64 @ext2fs_xattr_set(%struct.ext2_xattr_handle* %24, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %27, i32 %30)
  store i64 %31, i64* %5, align 8
  br label %32

32:                                               ; preds = %23, %22
  %33 = call i32 @ext2fs_xattrs_close(%struct.ext2_xattr_handle** %4)
  %34 = load i64, i64* %5, align 8
  store i64 %34, i64* %2, align 8
  br label %35

35:                                               ; preds = %32, %15
  %36 = load i64, i64* %2, align 8
  ret i64 %36
}

declare dso_local i64 @ext2fs_xattrs_open(i32, i32, %struct.ext2_xattr_handle**) #1

declare dso_local i64 @ext2fs_xattrs_read(%struct.ext2_xattr_handle*) #1

declare dso_local i64 @ext2fs_xattr_set(%struct.ext2_xattr_handle*, i8*, i32, i32) #1

declare dso_local i32 @ext2fs_xattrs_close(%struct.ext2_xattr_handle**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
